<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WindBLE</string>
    <string name="status_connected">Connected</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="connect">CONNECT</string>
    <string name="connecting">…</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="scanning">Scanning for BLE devices…</string>
    <string name="no_devices">No devices found. Tap back to retry.</string>
    <string name="tap_to_connect">Tap a device to connect</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_apparent">Show Apparent Wind</string>
    <string name="action_show_true">Show True Wind</string>
    <string name="pref_speed_unit">Speed Unit</string>
    <string name="action_web_server_toggle">WiFi Display Server</string>
    <string name="action_server_url">Show Server URL…</string>
    <string name="action_add_ble_gps">Add BLE GPS…</string>
    <string name="action_night_mode">Night Mode (Red)</string>
    <string name="action_large_number">Large Number View</string>
    <string name="action_shift_alert">Wind Shift Alert</string>
    <string name="action_log_trip">Start Recording</string>
    <string name="pref_speed_unit_key">speed_unit</string>
    <string name="pref_auto_reconnect">Auto-reconnect</string>
    <string name="pref_auto_reconnect_key">auto_reconnect</string>
    <string name="pref_screen_on">Keep Screen On</string>
    <string name="pref_screen_on_key">screen_on</string>
</resources>
