<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_show_apparent"
        android:title="@string/action_show_apparent"
        android:checkable="true"
        android:checked="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_show_true"
        android:title="@string/action_show_true"
        android:checkable="true"
        android:checked="true"
        app:showAsAction="never"/>

    <item android:id="@+id/action_night_mode"
        android:title="@string/action_night_mode"
        android:checkable="true"
        app:showAsAction="never"/>

    <item android:id="@+id/action_large_number"
        android:title="@string/action_large_number"
        app:showAsAction="never"/>

    <item android:id="@+id/action_shift_alert"
        android:title="@string/action_shift_alert"
        android:checkable="true"
        app:showAsAction="never"/>

    <item android:id="@+id/action_log_trip"
        android:title="@string/action_log_trip"
        app:showAsAction="never"/>

    <item android:id="@+id/action_web_server_toggle"
        android:title="@string/action_web_server_toggle"
        android:checkable="true"
        app:showAsAction="never"/>

    <item android:id="@+id/action_server_url"
        android:title="@string/action_server_url"
        app:showAsAction="never"/>

    <item android:id="@+id/action_add_ble_gps"
        android:title="@string/action_add_ble_gps"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
